add-to-localstorage

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
         <button id="closeBtn">Close</button>
       </div>
     </form>
+    <p id="notesYouAdd">Notes you add appear here</p>
 
     <script type="module" src="/src/script.js"></script>
   </body>
