--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/public/assets/keep_logo.png" />
     <link rel="stylesheet" href="/src/styles/style.css" />
-    <script></script>
+    <link rel="stylesheet" href="/src/styles/content.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Keep notes</title>
   </head>
   <body>
@@ -43,6 +50,7 @@
       </div>
     </form>
     <p id="notesYouAdd">Notes you add appear here</p>
+    <div id="content"></div>
 
     <script type="module" src="/src/script.js"></script>
   </body>
