--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,14 @@
         <button id="closeBtn">Close</button>
       </div>
     </form>
+
+    <div class="searchDiv">
+      <i class="fas fa-search"></i>
+      <input type="text" class="searchInput" placeholder="Search notes..." />
+    </div>
+
     <p id="notesYouAdd">Notes you add appear here</p>
+
     <div id="content"></div>
 
     <div data="modal">
